# hs-mcp

./: .gitignore  README.md  flake.nix  hs-mcp.cabal
Test/: Main.hs
app/: Client.hs  Main.hs
src/Network/MCP/: Client.hs  Server.hs  Types.hs
src/Network/MCP/Client/: Request.hs  Types.hs
src/Network/MCP/Server/: StdIO.hs  Types.hs
src/Network/MCP/Transport/: StdIO.hs  Types.hs
