cabal-version:      2.4
name:               hs-mcp
version:            0.1.0.0
synopsis:           Haskell implementation of Model Context Protocol (MCP)
description:        A Haskell implementation of the Model Context Protocol (MCP) for connecting AI models to tools and data sources.
homepage:           https://github.com/buecking/hs-mcp
bug-reports:        https://github.com/buecking/hs-mcp/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Bryan Buecking
maintainer:         "drop 8 $ reverse<moc.liamg@gnikceub+maps_on>"
copyright:          Public Domain
category:           AI
extra-source-files: CHANGELOG.md
                    README.md

library
  exposed-modules:    Network.MCP.Types
                    , Network.MCP.Transport.Types
                    , Network.MCP.Transport.StdIO
                    , Network.MCP.Client
                    , Network.MCP.Client.Request
                    , Network.MCP.Client.Types
                    , Network.MCP.Server
                    , Network.MCP.Server.Types
                    , Network.MCP.Server.StdIO
                    
  default-extensions:
      LambdaCase
      BangPatterns
      ScopedTypeVariables
  build-depends:      base >=4.14 && <5
                    , aeson >=1.5 && <3.0
                    , bytestring >=0.10 && <0.12
                    , containers >=0.6 && <0.7
                    , unordered-containers >= 0.2
                    , directory >=1.3 && <1.4
                    , filepath >=1.4 && <1.5
                    , mtl >=2.2 && <2.4
                    , stm >=2.5 && <2.6
                    , text >=1.2 && <2.1
                    , time >=1.9 && <1.13
                    , uuid >=1.3 && <1.4
                    , transformers >=0.5 && <0.7
                    , async >=2.2 && <2.3
                    , process >= 1.6
                    
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -Wcompat

executable mcp-echo-server
  main-is:            app/Main.hs
  build-depends:      base >=4.14 && <5
                    , hs-mcp
                    , aeson >=1.5 && <3.0
                    , containers >=0.6 && <0.7
                    , stm >=2.5 && <2.6
                    , text >=1.2 && <2.1
                    
  hs-source-dirs:     .
  default-language:   Haskell2010
  ghc-options:        -Wall -Wcompat -main-is AppMain

executable mcp-client
  main-is:            app/Client.hs
  build-depends:      base >=4.14 && <5
                    , hs-mcp
                    , aeson >=1.5 && <3.0
                    , containers >=0.6 && <0.7
                    , stm >=2.5 && <2.6
                    , text >=1.2 && <2.1
                    
  hs-source-dirs:     .
  default-language:   Haskell2010
  ghc-options:        -Wall -Wcompat -main-is AppClient

test-suite mcp-test
  type:               exitcode-stdio-1.0
  main-is:            Test/Main.hs
  build-depends:      base >=4.14 && <5
                    , hs-mcp
                    , aeson >=1.5 && <3.0
                    , bytestring >=0.10 && <0.12
                    , containers >=0.6 && <0.7
                    , HUnit >=1.6 && <1.7
                    , stm >=2.5 && <2.6
                    , temporary >=1.3 && <1.4
                    , text >=1.2 && <2.1
                    
  hs-source-dirs:     .
  default-language:   Haskell2010
  ghc-options:        -Wall -Wcompat -threaded
